--- a/whatogift/package.json
+++ b/whatogift/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-autocomplete-tags": "^2.0.0",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
