--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.16",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-autocomplete-tags": "^2.0.0",
