--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "expo": "~46.0.16",
+    "expo": "^46.0.16",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^8.6.1",
     "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-native": "0.69.6",
